# C-Project-Template

./: .clang-format  .gitignore  CMakeLists.txt
.nvim/: nvim-dap.lua
project/src/: main.c
